# scaffml

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
scaffml/: cli.py
scaffml/core/: generator.py  renderer.py  utils.py
scaffml/templates/ml_project/: structure.yaml
scaffml/templates/ml_project/files/: Dockerfile.j2  README.md.j2  config.py.j2
