[metadata]
name = scaffml
version = 0.1.0
description = Forge production-ready Python projects
long_description = file: README.md
long_description_content_type = text/markdown
author = Asibeh Tenager
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    scaffml = scaffml.cli:app